leptos_macro/tests/ui/view/expected_one_let_bind_got_more_slot_version.stderr
error[E0593]: closure is expected to take 1 argument, but it takes 2 arguments
  --> tests/ui/view/expected_one_let_bind_got_more_slot_version.rs:29:17
   |
29 |                 <p>{item}</p>
   |                 ^^^^^^^^^^^^^
   |                 |
   |                 expected closure that takes 1 argument
   |                 takes 2 arguments
